--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
+  <img src="src/assets/images/yes.png" alt="">
 </body>
 
 </html>
